# neural-symmetry-detection

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
src/nn-sym-test/embed/: __init__.py  embedder.py  numpy_embedder.py  torch_embedder.py
src/nn-sym-test/symmetry/: symmetry.py
